--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Navigation -->
   <header id="navigation">
-    <h1 class="logo">Anwaartech</h1>
+    <h1 class="logo">Emmatech</h1>
     <nav>
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
@@ -24,7 +24,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <div class="hero-content">
-      <h1>I’m Anwaar.<br>Glad to see you!</h1>
+      <h1>I’m Emmanual.<br>Glad to see you!</h1>
       <p>I’m a software developer! I can help you build a product, feature or website. 
         Look through some of my work and experience! If you like what you see and have a project 
         you need coded, don’t hesitate to contact me.
