removed the logos

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <a href="#contact" class="connect-link">LET’S CONNECT</a>
       <div class="social-icons">
         <img src="icons/Disabled-1.png" alt="Twitter">
-        <img src="icons/Linkedin icon.png" alt="LinkedIn">
-        <img src="icons/Disabled.png" alt="GitHub">
+        <img src="" alt="LinkedIn">
+        <img src="" alt="GitHub">
       </div>
     </div>
   </section>
